<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"/>
    <item android:id="@+id/nav_history"
        android:title="@string/nav_history"
        android:icon="@drawable/ic_history"/>
    <!-- Placeholder untuk FAB tengah -->
    <item android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent"/>
    <item android:id="@+id/nav_progress"
        android:title="@string/nav_stats"
        android:icon="@drawable/ic_progress"/>
    <item android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_person"/>
</menu>